src/test/deca/context/invalid/class/10_declMethodInvalide2.deca
/* Description:
     tester class qui possede de méthod invalide
     (dans le super class, le nom de méthode existe mais la signature n'est pas correcte)

    Historique:
      cree le 17/01/2020
*/

   class A {

    int getX(){

    }

   }

   class B extends A {

    int getX (int x){
        x + 2;
    }


   }
